# dl_lecture_competition_pub

./: main.py  main_modified.py  pretrain.py  pyproject.toml
configs/: config.yaml  config_pretrain.yaml
scripts/: experiment_CLIP.py  experiments.py
src/: common.py  data_preprocessing.py  datasets.py  image_models.py  losses.py  modified_models.py  simpleconv.py
